--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <main>
-        <h1>tic tak toe</h1>
+        <h1>Tic Tac Toe</h1>
         <div id="container">
             <div id="game">
                 <button class="box"></button>
